import 'package:flutter/material.dart';

import '../../../domain/models.dart';
import '../../core/widgets.dart';

const String customSpeciesOption = 'Other';

const List<String> commonSpeciesOptions = <String>[
  'Dog',
  'Cat',
  'Bird',
  'Rabbit',
...
